# hockepy

./: .gitignore  .hockepy.conf  .travis.yml  Makefile  README.md  hocke.py  hockepy.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
hockepy/: __init__.py  config.py  game.py  log.py  nhl.py  utils.py
hockepy/commands/: __init__.py  base_command.py  schedule.py  standings.py  today.py
tests/: __init__.py  test_commands.py  test_nhl.py  test_utils.py
tests/test_data/: mock_schedule.json  mock_schedule1.json  nhl_empty_schedule.json  nhl_mock_plays.json  nhl_mock_schedule.json
