[tool.poetry]
name = "hockepy"
version = "0.2"
description = "CLI utility and (a subset of) NHL API for hockey nerds"
homepage = "https://github.com/geckon/hockepy"
authors = ["Tomáš Heger"]
license = "GPL-3.0-only"
readme="README.md"
packages = [
    { include = "hockepy" },
    { include = "hocke.py" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.24.0"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
bandit = "^1.9.1"
pycodestyle = "^2.14.0"
pylint = "^4.0.3"

[tool.poetry.scripts]
hockepy = 'hocke:run_hockepy'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
